--- a/README.adoc
+++ b/README.adoc
@@ -432,7 +432,7 @@ vpn_dir_="${1:-${HOME}}"
 vpn_path_=$(zenity --file-selection --multiple --filename="${vpn_dir_}")
 
 if [ -n "${vpn_path_}" ]; then
-	start_vpn_cmd_="sudo openvpn --config ${vpn_path_}"
+	start_vpn_cmd_="cd $(dirname ${vpn_path_}) && sudo openvpn --config ${vpn_path_}"
     cd "$(dirname ${vpn_path_})"
 
 	if [ -t 0 ]; then
