--- a/README.adoc
+++ b/README.adoc
@@ -349,6 +349,26 @@ fi
 
 ----
 
+=== `gnu-tr` - attempts to call the GNU implementation of tr
+
+.file::gnu-tr
+[source,sh]
+----
+#!/bin/bash
+
+report-missing-executables tar "GNU tr" || exit 1
+
+if (/bin/tr --version 2>/dev/null | head -1 | grep tr &>/dev/null); then
+	exec /bin/tr "$@"
+elif (/usr/bin/tr --version 2>/dev/null | head -1 | grep tr &>/dev/null); then
+	exec /usr/bin/tr "$@"
+else
+	echo You don\'t have GNU tr installed. >&2
+	exit 1
+fi
+
+----
+
 === `upcase` - upcase a string (read from stdin)
 
 .file::upcase
@@ -356,9 +376,9 @@ fi
 ----
 #!/bin/bash
 
-report-missing-executables tr tr || exit 1
+report-missing-executables tr "GNU tr" || exit 1
 
-exec tr '[:lower:]' '[:upper:]'
+exec gnu-tr '[:lower:]' '[:upper:]'
 
 ----
 
@@ -369,9 +389,9 @@ exec tr '[:lower:]' '[:upper:]'
 ----
 #!/bin/bash
 
-report-missing-executables tr tr || exit 1
+report-missing-executables tr "GNU tr" || exit 1
 
-exec tr '[:upper:]' '[:lower:]'
+exec gnu-tr '[:upper:]' '[:lower:]'
 
 ----
 
