fix: Do not print erroneous messages @ gnu-sed & gnu-tar

--- a/README.adoc
+++ b/README.adoc
@@ -318,9 +318,9 @@ exec gawk "$@"
 
 report-missing-executables sed "GNU sed" || exit 1
 
-if (/bin/sed --version | head -1 | grep sed &>/dev/null); then
+if (/bin/sed --version 2>/dev/null | head -1 | grep sed &>/dev/null); then
 	exec /bin/sed "$@"
-elif (sed --version | head -1 | grep sed &>/dev/null); then
+elif (sed --version 2>/dev/null | head -1 | grep sed &>/dev/null); then
 	exec sed "$@"
 else
 	echo You don\'t have GNU sed installed. >&2
@@ -338,9 +338,9 @@ fi
 
 report-missing-executables tar "GNU tar" || exit 1
 
-if (/bin/tar --version | head -1 | grep tar &>/dev/null); then
+if (/bin/tar --version 2>/dev/null | head -1 | grep tar &>/dev/null); then
 	exec /bin/tar "$@"
-elif (tar --version | head -1 | grep tar &>/dev/null); then
+elif (tar --version 2>/dev/null | head -1 | grep tar &>/dev/null); then
 	exec tar "$@"
 else
 	echo You don\'t have GNU tar installed. >&2
