--- a/README.adoc
+++ b/README.adoc
@@ -413,6 +413,31 @@ exec rmacs --new-frame eval "(let ((frame (selected-frame)))
 
 ----
 
+=== `rmacs-pager` - uses Rmacs GUI as a poor man's pager
+
+TODO: Description and potential improvement
+
+.file::rmacs-pager
+[source,sh]
+----
+#!/usr/bin/env tclsh
+
+package require Tcl 8
+package require fileutil 1.15
+
+set tempPath [::fileutil::tempfile]
+set tempBufferName [exec random-string]
+exec cat > $tempPath <@ stdin
+exec rmacs --new-frame eval "(with-current-buffer (get-buffer-create \"$tempBufferName\")
+  (insert-file \"$tempPath\")
+  (delete-file \"$tempPath\" nil)
+  (setq-local local/delete-frame-on-close t)
+  (Man-cleanup-manpage)
+  ;; (Man-fontify-manpage)
+  (switch-to-buffer (current-buffer)))" >@ stdout 2>@ stderr
+
+----
+
 === `cat-which <executable>` - `cat $(which executable-1 [executable-2] [...])`
 
 .file::cat-which
