feat: Use coreutils tools in smart-download for performance reason

--- a/README.adoc
+++ b/README.adoc
@@ -3445,7 +3445,7 @@ exec "${download_tool_}" "$@"
 
 === `smart-download` - downloads file, prompts overwriting, and compares checksums
 
-Downloads a file, compares checksums, and prompts overwriting when necessary.  This script returns the download destination as the last line upon a successful download with exit code 0.  In case of error or checksums not matching, a non-zero exit code is returned.
+Downloads a file, compares checksums, and prompts overwriting when necessary.  This script returns the download destination as the last line upon a successful download with exit code 0.  In case of error or checksums not matching, a non-zero exit code is returned.  This script leverages the MD5 sum, SHA1 sum, SHA256 sum from Coreutils.
 
 E.g.
 
@@ -3484,9 +3484,6 @@ smart-download --destination /tmp/aoeu --md5sum ABC --sha1sum DEF https://picsum
 
 package require Tcl 8.2
 package require fileutil
-package require md5
-package require sha1
-package require sha256
 
 try {
 	array set args [::cmdline::getoptions ::argv {
@@ -3530,16 +3527,16 @@ proc checksumsMatched {path checksumDict} {
 		} else {
 			switch $type {
 				md5 {
-					return [expr {$checksum eq [string toupper [::md5::md5 -hex -file $path]]}]
+					return [expr {$checksum eq [string toupper [exec md5sum $path | cut -f1 -d " "]]}]
 				}
 				sha1 {
-					return [expr {$checksum eq [string toupper [::sha1::sha1 -hex -file $path]]}]
+					return [expr {$checksum eq [string toupper [exec sha1sum $path | cut -f1 -d " "]]}]
 				}
 				sha256 {
-					return [expr {$checksum eq [string toupper [::sha256::sha256 -hex -file $path]]}]
+					return [expr {$checksum eq [string toupper [exec sha256sum $path | cut -f1 -d " "]]}]
 				}
 				default {
-					return 0
+					return 1
 				}
 			}
 		}
@@ -3566,7 +3563,7 @@ if {[lindex [array get ::env VERBOSE] 1] == 1} {
 	puts "URI: $uri"
 }
 
-exec report-missing-executables aria2c Aria2c >@ stdout 2>@ stderr
+exec report-missing-executables aria2c Aria2c md5sum Coreutils sha1sum Coreutils sha256sum Coreutils >@ stdout 2>@ stderr
 
 if {[file exists $dest]} {
 	if {[dict values $checksumDict] == {{} {} {}}} {
