--- a/README.adoc
+++ b/README.adoc
@@ -257,7 +257,9 @@ acme -a \
 ----
 #!/bin/dash
 
-exec terminator "$@"
+# Terminator has some memory leaks, throws GTK error messages to the console
+# GNOME terminal doesn't handle mouse scrolling well
+exec xfce4-terminal "$@"
 
 ----
 
