--- a/README.adoc
+++ b/README.adoc
@@ -440,6 +440,34 @@ exec rmacs --new-frame eval "(with-current-buffer (get-buffer-create \"$tempBuff
 
 ----
 
+=== `rmacs-tee` - tee's to an Rmacs buffer
+
+TODO: Description
+
+.file::rmacs-tee
+[source,tcl]
+----
+#!/usr/bin/env tclsh
+
+package require Tcl 8
+
+set serverName [lindex $::argv 0]
+set bufferName [lindex $::argv 1]
+
+set bufferSize 4096
+
+while {![eof stdin]} {
+    set input [read stdin $bufferSize]
+    puts -nonewline $input
+    exec rmacs --name $serverName eval "(with-current-buffer (get-buffer-create \"$bufferName\")
+  (save-excursion
+    (goto-char (point-max))
+    (insert \"$input\")))
+  " 2>@ stderr
+}
+
+----
+
 === `cat-which <executable>` - `cat $(which executable-1 [executable-2] [...])`
 
 .file::cat-which
