--- a/README.adoc
+++ b/README.adoc
@@ -144,6 +144,8 @@ sudo apt install python3 fonts-noto emacs25
 
 === `run-with-new-env` - runs a command with a brand-new environment
 
+# TODO: Rename this
+
 Using Dash due to its speed & lightweight characteristics.
 
 .file::run-with-new-env
