feat: Add command to run a command with a term emu then detach

--- a/README.adoc
+++ b/README.adoc
@@ -358,17 +358,23 @@ exec xfce4-terminal "$@"
 
 === `run-with-term-emu` - runs a command in a termimal emulator
 
-TODO:
-* `SHELL` variable and description of this command
-* `--detach`
-
 .file::run-with-term-emu
 [source,sh]
 ----
 #!/bin/dash
 
 exec term-emu -e "tmux new-session '${SHELL} -c \"$@\"'"
-# exec term-emu -e "tmux new-session '${SHELL} -c \"$@\"' \; detach"
+
+----
+
+=== `run-with-term-emu-detach` - runs and detachs a command in a termimal emulator
+
+.file::run-with-term-emu-detach
+[source,sh]
+----
+#!/bin/dash
+
+exec term-emu -e "tmux new-session '${SHELL} -c \"$@\"' \; detach"
 
 ----
 
