--- a/README.adoc
+++ b/README.adoc
@@ -194,6 +194,9 @@ exec "$@"
 if [ -f "~/.env" ]; then
 	. ~/.env
 fi
+if [ -f "~/.env-prog" ]; then
+	. ~/.env-prog
+fi
 
 exec bash --login "$@"
 
