feat: Add script to list current user's daemontools daemons

--- a/README.adoc
+++ b/README.adoc
@@ -3943,6 +3943,32 @@ if {$enablePath ne ""} {
 
 ----
 
+==== `sv-list` - lists current daemons
+
+.file::sv-list
+[source,tcl]
+----
+#!/usr/bin/env tclsh
+
+# TODO: matching -h/--help
+# TODO: help text
+# TODO: command line arguments
+
+if {$::env(USER) eq "root"} {
+    set supervisedPath /etc/service
+} else {
+    if {[info exists ::env(MY_DAEMON_DIR)]} {
+        set supervisedPath $::env(MY_DAEMON_DIR)/enabled
+    } else {
+        set supervisedPath [file normalize ~/daemon/enabled]
+    }
+}
+
+foreach dir [glob -nocomplain $supervisedPath/*] {
+    puts [file tail $dir]
+}
+
+----
 
 == Legacy/Unused scripts
 
