--- a/README.adoc
+++ b/README.adoc
@@ -3177,6 +3177,25 @@ key-mon --decorated --meta --theme modern "$@"
 
 ----
 
+=== `sudo-askpass` - runs `sudo` with a graphical askpass program, also preserving some environment variables
+
+.file::sudo-askpass
+[source,sh]
+----
+#!/usr/bin/env sh
+
+if ! sudo --help >/dev/null 2>&1; then
+	echo "sudo not found, please install sudo" >&2
+	exit 1
+fi
+
+export SUDO_ASKPASS=${SUDO_ASKPASS:-$(which ssh-askpass)}
+export DISPLAY=${DISPLAY:-":0"}
+
+exec sudo --askpass -tt -E env "PATH=${PATH}" "$@"
+
+----
+
 === `suspend-me` - suspends computer
 
 .file::suspend-me
